--- a/helm/minecraft/templates/service.yaml
+++ b/helm/minecraft/templates/service.yaml
@@ -1,3 +1,4 @@
+# Änderungen an templates/service.yaml für RCON-Support
 apiVersion: v1
 kind: Service
 metadata:
@@ -12,5 +13,14 @@ spec:
     protocol: TCP
     name: minecraft
     nodePort: {{ .Values.service.nodePort | default 30565 }}
+  {{- if .Values.rcon.enabled }}
+  - port: {{ .Values.rcon.port | default 25575 }}
+    targetPort: {{ .Values.rcon.port | default 25575 }}
+    protocol: TCP
+    name: rcon
+    {{- if .Values.service.rconNodePort }}
+    nodePort: {{ .Values.service.rconNodePort }}
+    {{- end }}
+  {{- end }}
   selector:
     app: {{ .Release.Name }}
