--- a/helm/minecraft/templates/configmap.yaml
+++ b/helm/minecraft/templates/configmap.yaml
@@ -1,4 +1,3 @@
-# Änderungen an templates/configmap.yaml für RCON-Support
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -43,6 +42,8 @@ data:
     pvp={{ .Values.server.properties.pvp }}
     query.port=25565
     rate-limit=0
+    rcon.password=
+    rcon.port=25575
     resource-pack=
     resource-pack-sha1=
     server-ip=
