--- a/helm/minecraft/templates/statefulset.yaml
+++ b/helm/minecraft/templates/statefulset.yaml
@@ -1,4 +1,3 @@
-# Datei: templates/statefulset.yaml (ersetzt pod.yaml)
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -6,8 +5,11 @@ metadata:
   labels:
     app: {{ .Release.Name }}
 spec:
-  replicas: {{ .Values.replicaCount | default 1 }}  # Auf 0 setzen zum Ausschalten
+  replicas: {{ .Values.replicaCount | default 1 }}
   serviceName: {{ .Release.Name }}-headless
+  podManagementPolicy: Parallel
+  updateStrategy:
+    type: RollingUpdate
   selector:
     matchLabels:
       app: {{ .Release.Name }}
@@ -15,7 +17,11 @@ spec:
     metadata:
       labels:
         app: {{ .Release.Name }}
+      annotations:
+        # Diese Annotation erzwingt einen Neustart bei Änderungen der ConfigMap
+        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
     spec:
+      terminationGracePeriodSeconds: 60
       initContainers:
       - name: wait-for-resources
         image: busybox
@@ -46,6 +52,10 @@ spec:
       containers:
       - name: minecraft-java-container
         image: noahjeana/multi-java:1.0.1
+        lifecycle:
+          preStop:
+            exec:
+              command: ["/bin/sh", "-c", "echo 'Server wird heruntergefahren...' && cd /app && java -Xms128M -Xmx128M -cp server.jar org.bukkit.craftbukkit.Main stop"]
         ports:
         - containerPort: 25565
           name: minecraft
@@ -143,22 +153,3 @@ spec:
         configMap:
           name: {{ .Values.initResources.releaseName }}-world-link
           defaultMode: 0755
----
-# Headless-Service für das StatefulSet
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ .Release.Name }}-headless
-  labels:
-    app: {{ .Release.Name }}
-spec:
-  clusterIP: None
-  selector:
-    app: {{ .Release.Name }}
-  ports:
-  - port: 25565
-    name: minecraft
-  {{- if .Values.rcon.enabled }}
-  - port: {{ .Values.rcon.port | default 25575 }}
-    name: rcon
-  {{- end }}
