--- a/helm/minecraft/templates/pvc.yaml
+++ b/helm/minecraft/templates/pvc.yaml
@@ -19,3 +19,14 @@ spec:
   resources:
     requests:
       storage: {{ .Values.storage.world }}
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: {{ .Release.Name }}-backups
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: {{ .Values.storage.backup | default "10Gi" }}
